# sosie-releases

./: .env.example  .gitignore  AGENTS.MD  README.md  app.py  install.ps1  install.sh  pyproject.toml  requirements-macos.txt  requirements.txt  sosie.spec
assets/: README.md
docs/: ARCHITECTURE.md
examples/: multiprocess_demo.py
scripts/: build.py  package_portable.sh
src/: cli.py
src/agent_server/: __init__.py  server.py
src/agents/: registry.py  services.py
src/agents/ask_hti_agent/: __init__.py  agent.py
src/agents/common/: __init__.py  tools.py
src/agents/common/memory/: __init__.py  common.py  config.py  filters.py  service.py
src/agents/deep_research_agent/: __init__.py  agent.py
src/agents/doc_qa_agent/: __init__.py  agent.py
src/gateway/: __init__.py
src/gateway/email/: __init__.py  agent_runner.py  client.py  config.py  egress.py  ingress.py  models.py  relay.py  router.py  service.py  store.py  util.py
src/indexer/: DESIGN.md  __init__.py  activity.py  api_server.py  auth.py  chunker.py  config.py  exceptions.py  models.py  process.py  roots.py  settings.py  store.py
src/indexer/embeddings/: __init__.py  base.py  openai.py
src/indexer/parsers/: __init__.py  base.py  pdf.py  text.py  word.py
src/watcher/: DESIGN.md  __init__.py  config.py  event_processor.py  exceptions.py  fs_watcher.py  models.py  process.py  queue.py  root_manager.py
tests/: __init__.py  test_agent_registry.py  test_auth.py  test_config.py  test_event_processor.py  test_fs_watcher.py  test_indexer_api_server.py  test_indexer_chunker.py  test_indexer_config.py  test_indexer_embeddings.py  test_indexer_models.py  test_indexer_parsers.py  test_indexer_process.py  test_indexer_store.py  test_memory_filters.py  test_models.py  test_process.py  test_queue.py  test_root_manager.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/layout/: Layout.tsx
web/src/pages/: AgentsPage.tsx  ConversationPage.tsx  KnowledgePage.tsx  LoginPage.tsx  SettingsPage.tsx  SystemPage.tsx
web/src/stores/: agentStore.ts  authStore.ts  conversationStore.ts  userStore.ts
